Upgraded and cleaned up a bit.